--- a/energy2d/.classpath
+++ b/energy2d/.classpath
@@ -3,5 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="exe/lib/getdown.jar"/>
+	<classpathentry kind="lib" path="exe/lib/samskivert.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
